## LibKafkaConect
## A C++ shared libray for connecting to Kafka

#
# Warning this is the first time I've made a configure.ac/Makefile.am thing
# Please improve it as I have no idea what I am doing
# @benjamg
#

AC_INIT([LibKafkaConnect], [0.1])
AC_PREREQ([2.59])

AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall])

AC_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_CPP

AC_CONFIG_MACRO_DIR([build-aux/m4])

#
# Version number
#
AC_SUBST([KAFKACONNECT_VERSION], [1:0:1])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT